libvlc_video_get_size returns incorrect height (returns height + 16)
libvlc_video_get_size was returning correct height till 2.1.5 From 2.2.0 onwards the call returns height + 16 (e.g. for 320x240 video the video dimensions are returned as 320x256)
libvlc_video_get_size was returning correct height till 2.1.5 From 2.2.0 onwards the call returns height + 16 (e.g. for 320x240 video the video dimensions are returned as 320x256)
VideoLAN code repository instance