libvlc: return useful/visible video dimensions (fixes #15122)